--- a/.env
+++ b/.env
@@ -644,9 +644,9 @@ ALLOW_SHARED_LINKS_PUBLIC=true
 #                        UI                         #
 #===================================================#
 
-APP_TITLE=LibreChat
+APP_TITLE=木芒果的聊天室
 # CUSTOM_FOOTER="My custom footer"
-HELP_AND_FAQ_URL=https://librechat.ai
+HELP_AND_FAQ_URL=https://www.baidu.com
 
 # SHOW_BIRTHDAY_ICON=true
 
