--- a/.env
+++ b/.env
@@ -644,7 +644,7 @@ ALLOW_SHARED_LINKS_PUBLIC=true
 #                        UI                         #
 #===================================================#
 
-APP_TITLE=木芒果的聊天室
+APP_TITLE=AI朋友圈
 # CUSTOM_FOOTER="My custom footer"
 HELP_AND_FAQ_URL=https://www.baidu.com
 
