--- a/config.yaml
+++ b/config.yaml
@@ -171,6 +171,7 @@ mcpServers:
   mcp-server-chart:
     type: sse
     url: "https://mcp.api-inference.modelscope.net/143b865a80f840/sse"
+    chatMenu: true
 
 # Definition of custom endpoints
 endpoints:
@@ -239,7 +240,7 @@ endpoints:
       apiKey: "${MODELSCOPE_API_KEY}"
       baseURL: "https://api-inference.modelscope.cn/v1"
       models:
-        default: [ "deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B","Qwen/Qwen3-VL-30B-A3B-Instruct","Qwen/Qwen3-Coder-480B-A35B-Instruct" ]
+        default: [ "deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B","Qwen/Qwen3-VL-235B-A22B-Instruct","Qwen/Qwen3-Coder-480B-A35B-Instruct" ]
         fetch: false
       titleConvo: true
       titleModel: "current_model"
