--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@librechat/backend",
+  "name": "aipyq/backend",
   "version": "v0.8.1-rc1",
   "description": "",
   "scripts": {
@@ -16,10 +16,6 @@
     "ban-user": "node ./ban-user.js",
     "delete-user": "node ./delete-user.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/danny-avila/LibreChat.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -29,10 +25,6 @@
   "imports": {
     "~/*": "./*"
   },
-  "bugs": {
-    "url": "https://github.com/danny-avila/LibreChat/issues"
-  },
-  "homepage": "https://librechat.ai",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.52.0",
     "@aws-sdk/client-s3": "^3.758.0",
